--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: grade_up
+name: practiceexams
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,10 +30,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+#  firebase_core: ^3.13.0
+#  firebase_auth: ^5.5.3
+  http: ^1.2.0 # You might not need this anymore if you solely use Dio
+  dio: ^5.7.0 # Check pub.dev for the latest version
+  go_router: ^15.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+#  flutter_screenutil
+  flutter_bloc: ^9.1.1
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
+  flutter_secure_storage: ^9.2.2
+  get_it: ^8.0.0
+  injectable: ^2.5.0
+#  inject_annotation: ^1.0.1
+  hive: ^2.2.3                # Core database package
+  hive_flutter: ^1.1.0        # Flutter integration
+  path_provider: ^2.0.11      # Needed for Hive.initFlutter()
+  injectable_generator: ^2.5.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +64,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1      # Code generation for Hive models
+  build_runner: ^2.4.15        # Runs the generator
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
+
+
+#  go_router:
+#  flutter_svg:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -52,38 +79,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
