--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   flutter_bloc: ^9.1.1
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
-  flutter_secure_storage: ^9.2.2
   get_it: ^8.0.0
   injectable: ^2.5.0
 #  inject_annotation: ^1.0.1
@@ -53,6 +52,13 @@ dependencies:
   injectable_generator: ^2.5.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  get_storage: ^2.1.1
+  flutter_secure_storage: ^9.2.4
+  flutter_screenutil: ^5.6.1
+  cached_network_image: ^3.3.1
+  sqflite: ^2.3.2
+#  flutter_riverpod: ^2.4.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
