--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,13 +50,14 @@ dependencies:
   hive_flutter: ^1.1.0        # Flutter integration
   path_provider: ^2.0.11      # Needed for Hive.initFlutter()
   injectable_generator: ^2.5.0
-  freezed_annotation: ^2.4.1
+  freezed_annotation: ^3.0.0
   json_annotation: ^4.8.1
   get_storage: ^2.1.1
   flutter_secure_storage: ^9.2.4
   flutter_screenutil: ^5.6.1
   cached_network_image: ^3.3.1
   sqflite: ^2.3.2
+  pretty_dio_logger: ^1.4.0
 #  flutter_riverpod: ^2.4.0
   path: ^1.8.3
 
@@ -72,7 +73,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   hive_generator: ^2.0.1      # Code generation for Hive models
   build_runner: ^2.4.15        # Runs the generator
-  freezed: ^2.4.5
+  freezed: ^3.0.0-0.0.dev
   json_serializable: ^6.7.1
 
 
